--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,10 +7,10 @@ AllCops:
     - 'bin/*'
 
 Metrics/LineLength:
-  Max: 100
+  Max: 200
 
 Metrics/MethodLength:
-  Max: 20
+  Max: 100
 
 Metrics/ClassLength:
   Max: 200
@@ -39,3 +39,6 @@ Style/FrozenStringLiteralComment:
 
 Metrics/AbcSize:
   Max: 40
+
+Style/OptionalBooleanParameter:
+  Enabled: false
