Add experimental database sync feature
Updated README to include local docker image testing

Add experimental database sync feature

- Add --experimental-db CLI flag for database operations
- Implement SystemAdapter using system-native SSH commands
- Fix Ed25519 compatibility issues with modern SSH servers
- Update Dockerfile to run from source using bundle exec
- Add comprehensive unit tests
- Update documentation and changelog

This resolves SSH connection issues when syncing databases with modern OpenSSH servers.

Fix Docker entrypoint to run wordmove from source

- Remove conflicting gem-installed wordmove binary
- Use direct ruby execution instead of bundle exec
- Prevent PATH conflicts with system-installed wordmove
- Ensure experimental-db feature works in Docker containers

Remove conflicting wordmove binary from Docker image

- Remove /usr/local/bundle/bin/wordmove to prevent PATH conflicts
- Ensure docker-entrypoint.sh scripts use ruby exe/wordmove instead
- Prevent version conflicts between system and source wordmove

Fix Docker compatibility with existing entrypoint scripts

- Install wordmove gem properly in container
- Create wrapper script in /usr/local/bin/wordmove for backward compatibility
- Allow existing docker-entrypoint.sh scripts to work unchanged
- Maintain experimental-db functionality across all projects

Fix Docker build by removing git dependency from gemspec

- Replace 'git ls-files' with Dir.glob for Docker compatibility
- Include only necessary files: lib/, exe/, wordmove.gemspec, LICENSE, Rakefile
- Maintain optimized Docker build context with .dockerignore
- Preserve experimental-db functionality and backward compatibility

Added docker ignore config

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -45,10 +45,15 @@ COPY wordmove.gemspec Gemfile ./
 # Copy the whole project
 COPY . .
 
-# Install the gem from source
+# Install dependencies and build wordmove gem
 RUN bundle install \
     && rake build \
     && gem install pkg/wordmove-*.gem
 
-ENTRYPOINT ["wordmove"]
+# Create a wrapper script for backward compatibility
+RUN echo '#!/bin/sh\nexec bundle exec wordmove "$@"' > /usr/local/bin/wordmove \
+    && chmod +x /usr/local/bin/wordmove
+
+# Set the entrypoint to run wordmove from bundle
+ENTRYPOINT ["bundle", "exec", "wordmove"]
 CMD ["help"]
